# LearnCMake

./: CMakeLists.txt  main.cpp  test.cpp
LibraryModule/: CMakeLists.txt  module.cpp  module.h
include/: test.h
